--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Sisters -- Fiction'
 - !lcsh 'Suicide -- Fiction'
 - !lcc 'PT'
+- GITenberg
 title: El deseo
 url: http://www.gutenberg.org/ebooks/26078
